# luacrc32c

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
doc/: luacrc32c.html
src/: luacrc32c.c
test/: luacrc32c_test.lua
